@@ -2,7 +2,7 @@ Package: gdsfmt
 Type: Package
 Title: R Interface to CoreArray Genomic Data Structure (GDS) Files
 Version: 1.7.16
-Date: 2016-03-18
+Date: 2016-03-30
 Depends: R (>= 2.15.0)
 Imports: methods
 Suggests: parallel, digest, crayon, RUnit, knitr, BiocGenerics
